force-app/main/default/objects/Result_Table__c/Result_Table__c.object-meta.xml
<CustomObject>
    <label>Result Table</label>
    <nameField>
        <displayFormat>Results-{0000}</displayFormat>
        <label>Result Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>