force-app/main/default/objects/Result_Table__c/fields/P2_Played__c.field-meta.xml
<CustomField>
    <fullName>P2_Played__c</fullName>
    <label>P2 Played</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Scissors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>