force-app/main/default/objects/Result_Table__c/fields/Who_Win__c.field-meta.xml
<CustomField>
    <fullName>Who_Win__c</fullName>
    <label>Who Win?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Scissors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>