force-app/main/default/objects/Result_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P1_Played__c</columns>
    <columns>P2_Played__c</columns>
    <columns>Who_Win__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>